problems with java